Implement the login and storing a refresh and access token
